--- a/openy_lily/sass/misc/_alerts.scss
+++ b/openy_lily/sass/misc/_alerts.scss
@@ -15,5 +15,6 @@ article.site-alert {
 .site-alert--header, .site-alert--footer {
   border: 1px solid $grey;
   position: relative;
-  z-index: 96;
+  z-index: 901;
 }
+
